# OpenCV_LearnNotes

./: README.md
03_DNN_YOLOV5/: CMakeLists.txt  Makefile  main.cpp  objectdetection.cpp  objectdetection.h
04_cmake_install/: CMakeLists.txt  Makefile  main.cpp
04_cmake_install/src/utils/: CMakeLists.txt  utils.cpp  utils.h
04_cmake_install/src/yolo/: CMakeLists.txt  yolo.cpp  yolo.h
04_cmake_thread/: CMakeLists.txt  main.cpp
04_cmake_thread/src/func1/: CMakeLists.txt  my_thread.cpp  my_thread.h
04_cmake_thread/src/func2/: CMakeLists.txt  func2.cpp  func2.h
04_cmake_thread/src/utils/: CMakeLists.txt  comment.cpp  comment.h
05_cmake_dnn_YOLOV5/: 05_cmake_dnn_YOLOV5.code-workspace  CMakeLists.txt  main.cpp
05_cmake_dnn_YOLOV5/src/: objectdetection.cpp  objectdetection.h
05_cmake_dnn_YOLOV5/weight/: classes_Hat.txt
06_DNN_ImageClassification/: 06_DNN_ImageClassification.code-workspace  main.cpp
06_DNN_ImageClassification/src/: CMakeLists.txt  ImageClassification.cpp  imageClassification.h
06_DNN_ImageClassification/weight/: classs_DoorStatus.txt  classs_PowerRoomEnv.txt
06_DNN_ImageClassification_VGG16/: CMakeLists.txt  Makefile  main.cpp
06_DNN_ImageClassification_VGG16/src/: ImageClassification.cpp  imageClassification.h
07_Opencv_LaneDetection/: 07_Opencv_LaneDetection.code-workspace  CMakeLists.txt  main.cpp
08_opencv_DistortionCorrection/: CMakeLists.txt  main.cpp
08_opencv_DistortionCorrection/src/: CMakeLists.txt  distortioncorrection.cpp  distortioncorrection.h
09_opencv_MouseClick/: CMakeLists.txt  Makefile  main.cpp
09_opencv_MouseClick/src/: CMakeLists.txt  ImageCoordinates.cpp  ImageCoordinates.h
10_opencv_Network_Interface_Detect/: 10_opencv_Network_Interface_Detect.code-workspace  CMakeLists.txt  main.cpp
10_opencv_Network_Interface_Detect/src/: networkInterfaceDetect.cpp  networkInterfaceDetect.h
11_DNN_Opencv_ImgSegmentation/: CMakeLists.txt  main.cpp  main2.cpp  output_video.avi
11_DNN_Opencv_ImgSegmentation/src/: imagesegmentation.cpp  imagesegmentation.h
12_DNN_CarCount/: CMakeLists.txt  Makefile  main.cpp
12_DNN_CarCount/src/: objectDetect.cpp  objectDetect.h
13_DNN_Thread/: CMakeLists.txt  main.cpp
13_DNN_Thread_2/: main.cpp
13_DNN_Thread_2/src/: capture.cpp  capture.h  modelInference.cpp  modelInference.h  objectdetect.h  sharedQueue.cpp  sharedQueue.h
13_DNN_Thread_3/: CMakeLists.txt  main.cpp
13_DNN_Thread_3/src/: CMakeLists.txt  capture.cpp  capture.h  modelInference.cpp  modelInference.h  objectdetect.cpp  sharedQueue.h
13_yolov5_multipleModelsForSingleVideo/: CMakeLists.txt  main_singlevideo_multimodel.cpp  main_singlevideo_multimodel.cpp.bak1  yolov5.h
13_yolov5_multipleVideosMultipleModels/: CMakeLists.txt  main_multivideo_multimodel.cpp  yolov5.cpp  yolov5.h
14_Factory AndSingleton/: main.cpp
14_Factory AndSingleton/src/: factoryPattern.cpp  factoryPattern.h  singleton.h  yolov5Implementations.cpp  yolov5Implementations.h
14_FactoryAndSingleton_V2/: main.cpp
14_FactoryAndSingleton_V2/src/: CMakeLists.txt  factoryPattern.cpp  factoryPattern.h  singleton.h  yolov5Implementations.cpp  yolov5Implementations.h  yolov5_interface.cpp  yolov5_interface.h
14_FactoryAndSingleton_V3/: CMakeLists.txt  main.cpp
14_FactoryAndSingleton_V3/src/: factoryPattern.h  yolov5Implementations.h  yolov5_interface.h
15_CMake_Learn/: CMakeLists.txt  Makefile  main.cpp
15_CMake_Learn/tasks/: CMakeLists.txt  capture.cpp  capture.h
15_CMake_Learn/tasks2/: CMakeLists.txt  inference.cpp  inference.h
16_OpenCV_Mat/: CMakeLists.txt  main.cpp
17_Img_Task/: CMakeLists.txt  main.cpp
17_Img_Task/src/: imgclassification.cpp  logging.h  objectdetection.cpp  objectdetection.h
17_Img_Task/weigths/: ElectricalCabinetDoor.txt
18_Img_Task/: Makefile  main.cpp
18_Img_Task/src/: CMakeLists.txt  imgclassification.h  objectdetection.cpp  objectdetection.h  threadpool.h
18_Img_Task/weigths/: classes_Hat.txt  yolov5s_DoorStatus_20250620.txt
19_Curl_Libevrnt_demo/: 19_Curl_demo.code-workspace  CMakeLists.txt  main.cpp
19_Curl_Libevrnt_demo/src/ccurl/: CMakeLists.txt  ccurl.cpp  ccurl.h
19_Curl_Libevrnt_demo/src/ctimer/: CMakeLists.txt  timer.cpp  timer.h
20_VSCode_Learn/: CMakeLists.txt  Makefile  main.cpp  reade.md
21_Opencv_rtsp/: CMakeLists.txt  main.cpp
22_OpenCV_Hikvision_TemperatureMeasurement/: CMakeLists.txt  Makefile  example.cpp  main.cpp
22_OpenCV_Hikvision_TemperatureMeasurement/src/: CMakeLists.txt  TemperatureDetection.cpp  TemperatureDetection.h
python_opencv/: 说明书.txt
python_opencv/01_read_write_img/: main.py
